sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:15: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (test())
               ^AlgBubbleSort1:27: warning: enclosing method test has result type Unit: return value discarded
  return liste
  ^